--- a/style.css
+++ b/style.css
@@ -3,6 +3,17 @@ body{
     font-family: 'Courier New', Courier, monospace;
 }
 
+img{
+    box-sizing: border-box;
+    border-radius: 20px;
+    background-color: aqua;
+    width: 200px;
+}
+img:active{
+    width: 250px;
+    transition: ease-out 0.1s;
+}
+
 .container {
     display: flex;
     justify-content: center;
